<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginType">

    <View
        android:id="@+id/view3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/backgroundColor"
        android:clickable="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="48dp"
        android:fontFamily="@font/merrybold"
        android:text="@string/wlcm_bk"
        android:textColor="@color/colorPrimary"
        android:textSize="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:fontFamily="@font/merrybold"
        android:text="@string/to_quiz"
        android:textColor="@color/colorPrimary"
        android:textSize="27dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:srcCompat="@drawable/reg_sel" />

    <TextView
        android:id="@+id/textRegAs1"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/merrybold"
        android:text="@string/login_as"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <Button
        android:id="@+id/btnteach"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/btn_vector_wt"
        android:drawableStart="@drawable/ic_subject"
        android:drawablePadding="10dp"
        android:fontFamily="@font/monsemibo"
        android:paddingStart="40dp"
        android:paddingEnd="12dp"
        android:text="@string/teacher"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textRegAs1" />

    <Button
        android:id="@+id/btnstu"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/btn_vector_wt"
        android:drawableStart="@drawable/ic_name"
        android:drawablePadding="10dp"
        android:fontFamily="@font/monsemibo"
        android:paddingStart="40dp"
        android:paddingEnd="12dp"
        android:text="@string/student"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnteach" />

</androidx.constraintlayout.widget.ConstraintLayout>